[gd_scene load_steps=18 format=3 uid="uid://duwl5sldekn2r"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_0u0m4"]
[ext_resource type="Texture2D" uid="uid://bfqnlwh3hf87w" path="res://art/enemy/Blob.png" id="2_j8s2h"]
[ext_resource type="PackedScene" uid="uid://7gpl1jyx7wsl" path="res://scenes/Health.tscn" id="3_y1unv"]
[ext_resource type="PackedScene" uid="uid://cjwohg5ed45jj" path="res://scenes/Hitbox.tscn" id="4_1n8rf"]
[ext_resource type="Script" path="res://scripts/State/stateMachine.gd" id="5_2c3kk"]
[ext_resource type="Script" path="res://scripts/State/enemyIdle.gd" id="6_yghre"]
[ext_resource type="Script" path="res://scripts/State/enemyFollow.gd" id="7_2vsql"]
[ext_resource type="Script" path="res://scripts/State/enemyAttack.gd" id="8_no63c"]
[ext_resource type="Script" path="res://scripts/lineOfSight.gd" id="9_idnvk"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gharv"]
light_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_305en"]
atlas = ExtResource("2_j8s2h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yunbx"]
atlas = ExtResource("2_j8s2h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an2qe"]
atlas = ExtResource("2_j8s2h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mad2o"]
atlas = ExtResource("2_j8s2h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ski8j"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_305en")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_yunbx")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_an2qe")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_mad2o")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kalxv"]
radius = 11.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_ofe1f"]
radius = 5.0

[node name="Enemy" type="CharacterBody2D"]
material = SubResource("CanvasItemMaterial_gharv")
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_0u0m4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_ski8j")
animation = &"walk"
autoplay = "walk"
frame = 1
frame_progress = 0.674733

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("4_1n8rf")]
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("CircleShape2D_kalxv")

[node name="Health" parent="." instance=ExtResource("3_y1unv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ofe1f")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_2c3kk")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_yghre")
enemy = NodePath("../..")

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_2vsql")
enemy = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_no63c")
enemy = NodePath("../..")

[node name="LineOfSight" type="Node2D" parent="."]
script = ExtResource("9_idnvk")

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_aggro_timer_timeout"]
